# solana_vanity

./: Cargo.toml  build.rs
cuda/: kernel.cu
src/: cpu.rs  gpu.rs  gpu_kernel.cl  main.rs
