[package]
name = "solana_vanity"
version = "0.3.0"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ed25519-dalek = "2.1.1"
rand = "0.8"
rayon = "1.10"
bs58 = "0.4"
num-format = "0.4"
logfather = "0.2.6"
rust-gpu-tools = { version = "0.7", features = ["cuda"] }  # Use available version
indicatif = "0.17.7"
anyhow = "1.0"

[build-dependencies]
cc = "1.0"
