To resolve the error related to the ed25519_dalek crate, I'll provide the full and complete main.rs and Cargo.toml files.

Cargo.toml
Ensure that your Cargo.toml file includes the correct dependencies and structure. Here is the full content:

TOML
[package]
name = "solana_vanity"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "solana_vanity"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ed25519-dalek = "2.1.1"
rand = "0.8"
rayon = "1.10"
bs58 = { version = "0.5", features = ["check"] }
num-format = "0.4"
logfather = "0.2.6"
